--- a/static/index.html
+++ b/static/index.html
@@ -15,12 +15,11 @@
 
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="js/libreria.js"></script>
-    <script type="text/javascript" src="js/environment.js"></script>
     <!--Per la mappa-->
     <script type="text/javascript" src="js/mappa.js"></script>
     <!--Per le animazioni-->
     <script type="text/javascript" src="js/graphicEffects.js"></script>
-    <script type="text/javascript" src="js/adminArea.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </head>
 
 <body>
